--- a/Questao_03.html
+++ b/Questao_03.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Questão 03</title>
-        <script type="text/javascript" src="/Scripts/Questao_03.js" defer></script>
+        <script type="text/javascript" src="Questao_03.js" defer></script>
     </head>
 
     <body>
@@ -18,11 +18,11 @@
         </header>
 <!--Principal-->
         <main>
-            <object width="100%" data="./Navegador.html"></object>
+            <object width="100%" data="Navegador.html"></object>
         </main>   
 <!--Rodapé-->
         <footer>
-            <object width="100%" data="./rodape.html"></object>
+            <object width="100%" data="rodape.html"></object>
         </footer>
     </body>
 </html>
