--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </header>
 <!--Principal-->
         <main>
-            <object width="100%" data="./Navegador.html"></object>
+            <object width="100%" data="Navegador.html"></object>
         </main>
 <!--Rodapé-->
         <footer>
-            <object width="100%" data="./rodape.html"></object>
+            <object width="100%" data="rodape.html"></object>
         </footer>
     </body>
 </html>
