--- a/Navegador.html
+++ b/Navegador.html
@@ -12,11 +12,11 @@
         <main>
             <div>
                 <nav>
-                    <a href="/index.html" target="_parent">Tela Inicial</a><br>
-                    <a href="/Views/Questao_01.html" target="_parent">Clique aqui para a questão 01</a><br>
-                    <a href="/Views/Questao_02.html" target="_parent">Clique aqui para a questão 02</a><br>
-                    <a href="/Views/Questao_03.html" target="_parent">Clique aqui para a questão 03</a><br>
-                    <a href="/Views/Questao_04.html" target="_parent">Clique aqui para a questão 04</a><br>
+                    <a href="index.html" target="_parent">Tela Inicial</a><br>
+                    <a href="Questao_01.html" target="_parent">Clique aqui para a questão 01</a><br>
+                    <a href="Questao_02.html" target="_parent">Clique aqui para a questão 02</a><br>
+                    <a href="Questao_03.html" target="_parent">Clique aqui para a questão 03</a><br>
+                    <a href="Questao_04.html" target="_parent">Clique aqui para a questão 04</a><br>
                 </nav>
             </div>
         </main>
