--- a/Questao_02.html
+++ b/Questao_02.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Questão 02</title>
-        <script type="text/javascript" src="/Scripts/Questao_02.js" defer></script>
+        <script type="text/javascript" src="Questao_02.js" defer></script>
         <!--Ao utilizar o atributo defer, ele espera a página carregar para então rodar o js-->
     </head>
 
@@ -19,11 +19,11 @@
         </header>
 <!--Principal-->
         <main>
-            <object width="100%" data="./Navegador.html"></object>
+            <object width="100%" data="Navegador.html"></object>
         </main>
 <!--Rodapé-->
         <footer>
-            <object width="100%" data="./rodape.html"></object>
+            <object width="100%" data="rodape.html"></object>
         </footer>
     </body>
 </html>
