--- a/Questao_04.html
+++ b/Questao_04.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Questão 04</title>
-        <script type="text/javascript" src="/Scripts/Questao_04.js" defer></script>
+        <script type="text/javascript" src="Questao_04.js" defer></script>
     </head>
 
     <body>
@@ -18,12 +18,12 @@
         </header>
 <!--Principal-->
         <main>
-            <object width="100%" data="./Navegador.html"></object>
+            <object width="100%" data="Navegador.html"></object>
             <button onclick="mostrarAlunos()">Clique aqui para ativar o script</button>
         </main>
 <!--Rodapé-->
         <footer>
-            <object width="100%" data="./rodape.html"></object>
+            <object width="100%" data="rodape.html"></object>
         </footer>
     </body>
 </html>
