--- a/rodape.html
+++ b/rodape.html
@@ -10,7 +10,7 @@
         <footer>
             <br/><br/>
             <div class="rodape" align="left">
-                <a href='https://www.facebook.com/ifsppirituba' target='_blank'><img src='/facebook.png' width='40px' alt='IFSP Facebook' title="IFSP Facebook"></a>
+                <a href='https://www.facebook.com/ifsppirituba' target='_blank'><img src='facebook.png' width='40px' alt='IFSP Facebook' title="IFSP Facebook"></a>
             <!-- target='_blank' serve para abrir o link numa nova guia-->
             </div>
                 <p> IFSP - Câmpus Pirituba - AV. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100</p> 
